# MAR1D

./: .gitignore  BUILD.bazel  CMakeLists.txt  MAR1D  MAR1D-MacOS-wrap  MAR1D.icns  README.md  WORKSPACE.bazel  ao_example.c  appimage.nix  audio.c  audio.h  build-flatpak.sh  build.zig  build.zig.zon  bundle.nix  com.mar1d.MAR1D.yml  compile.sh  compile_and_run  controls.c  controls.h  darwin-app.nix  data  default.nix  dots.font  enemies.c  enemies.h  flake.nix  flatpak.nix  gamelogic.c  gamelogic.h  glfw_example.c  goodaudio.c  goodaudio.h  graphics.c  graphics.h  helpers.c  helpers.h  main.c  make_anim.sh  (+19 more)
MAR1D.app/Contents/MacOS/: MAR1D
accoutrements/: MAR1D-MacOS-wrap
darwin/: Info.plist  MAR1D.icns
libao-1.2.0/: CHANGES  acinclude.m4  aclocal.m4  ao.pc  ao.pc.in  config.status  configure  configure.ac  libao.conf.5  libtool
libao-1.2.0/doc/: ao_append_option.html  ao_close.html  ao_default_driver_id.html  ao_device.html  ao_driver_id.html  ao_driver_info.html  ao_driver_info_list.html  ao_file_extension.html  ao_free_options.html  ao_info.html  ao_initialize.html  ao_is_big_endian.html  ao_open_file.html  ao_open_live.html  ao_option.html  ao_play.html  ao_plugin_close.html  ao_plugin_device_clear.html  ao_plugin_device_init.html  ao_plugin_driver_info.html  ao_plugin_file_extension.html  ao_plugin_open.html  ao_plugin_play.html  ao_plugin_set_option.html  ao_plugin_test.html  ao_sample_format.html  ao_shutdown.html  config.html  drivers.html  index.html  libao-api.html  overview.html  plugin-api.html  plugin-overview.html
libao-1.2.0/include/ao/: ao_private.h  os_types.h.in
libao-1.2.0/src/: ao.vers  ao_aixs.c  ao_aixs.lo  ao_au.c  ao_au.lo  ao_null.c  ao_null.lo  ao_raw.c  ao_raw.lo  ao_wav.c  ao_wav.lo  ao_wmm.c  audio_out.c  audio_out.lo  config.c  config.lo  libao.la
libao-1.2.0/src/.deps/: ao_aixs.Plo  ao_au.Plo  ao_null.Plo  ao_raw.Plo  ao_wav.Plo  audio_out.Plo  config.Plo
libao-1.2.0/src/.libs/: libao.4.dylib  libao.dylib  libao.la  libao.lai
libao-1.2.0/src/plugins/alsa/: ao_alsa.c
libao-1.2.0/src/plugins/arts/: ao_arts.c
libao-1.2.0/src/plugins/esd/: ao_esd.c
libao-1.2.0/src/plugins/irix/: ao_irix.c
libao-1.2.0/src/plugins/macosx/: ao_macosx.c  ao_macosx.lo  libmacosx.la
libao-1.2.0/src/plugins/macosx/.deps/: ao_macosx.Plo
libao-1.2.0/src/plugins/macosx/.libs/: libmacosx.la  libmacosx.lai
libao-1.2.0/src/plugins/oss/: ao_oss.c
libao-1.2.0/src/plugins/pulse/: ao_pulse.c  ao_pulse.lo  libpulse.la
libao-1.2.0/src/plugins/pulse/.deps/: ao_pulse.Plo
libao-1.2.0/src/plugins/pulse/.libs/: libpulse.lai
libao-1.2.0/src/plugins/sndio/: ao_sndio.c
libao-1.2.0/src/plugins/sun/: ao_sun.c
nix/: README.md  darwin-app.nix  default.nix  flatpak.nix  package.nix  windows-pkgs.nix  windows.nix
nix/patches/: always-try.patch  dont-lock.patch  libconfig-no-msvc.patch  pkgconfig_requires.patch  sdl2_mixer-pkgconfig.patch
nix/zig-build/: default.nix  setup-hook.sh
resources/: README.md  data  mario.font  menuscreen_bg.bmp.bck  play  true_to_original.data
resources/2D/: README.md
resources/sounds/: blockbreak.raw  bulletbill.raw  fire.raw  intermission.raw  levelend.raw  lowtime.raw  portal1open.raw  portalenter.raw  rainboom.raw  shrink.raw  starmusic-fast.raw  swim.raw  underground-fast.raw  underwater.raw  vine.raw
sounds/: bowserfall.raw  castleend.raw  coin.raw  death.raw  jump.raw  konami.raw  mushroomeat.raw  oneup.raw  portalfizzle.raw  shot.raw  stab.raw  starmusic.raw  stomp.raw  underground.raw
src/: .CMakeLists.txt.swp  CMakeLists.txt  audio.c  audio.h  c.zig  controls.c  controls.h  enemies.c  enemies.zig  gamelogic.c  gamelogic.h  graphics.c  graphics.h  helpers.c  helpers.h  main.c  main.zig  mechanics.c  mechanics.h  menu.c  menu.h  meson.build  objects.c  objects.h  parsing.c  parsing.h  rendering.c  rendering.h  resources.c  resources.h.in  todo.org  visual_sounds.c  visual_sounds.h  windowing.c  windowing.h
website/: README.md  default.nix  download.html  downloads.html  flake.nix  huh.html  index.html  package.yaml  shell.nix  site.hs  style.scss  team.html  template.html
website/css/: style.scss
website/downloads/: index.html
website/nix/: default.nix  sources.json
website/src/: download.html  huh.html  index.html  style.scss  team.html  template.html
website/templates/: default.html
