genrule(
    name = "gen_sh",
    outs = ["gen.sh"],
    cmd = """
cat > $@ << "EOF"
#! /bin/sh
sed -e 's#@RESOURCE_DIRECTORY@#resources/#g'
EOF""",
)

genrule(
    name = "resources_h",
    srcs = [ "src/resources.h.in" ],
    outs = [ "resources.h" ],
    cmd = "$(location :gen_sh) < $(<) > $(@)",
    tools = [ ":gen_sh" ],
)

cc_binary(
    name = "MAR1D",
    srcs = glob(["src/*.c", "src/*.h"]) + [ ":resources_h" ],
    includes = [ "src" ],
    deps = [
        "@SDL2//:SDL2",
        "@SDL2_mixer//:SDL2_mixer",
        "@libconfig//:libconfig",
        "@libGLU//:libGLU",
        "@libGL//:libGL",
    ],
    data = glob(["resources/**"]),
)
